{{$NEXT}}

- In scalar context, DateTime::TimeZone->names_in_category returned an
  arrayref containing an arrayref (rather than _just_ an arrayref). Reported
  by Ed Shrock. RT #76791.


1.49    2012-09-13

- This release is based on version 2012f of the Olson database. This release
  includes contemporary changes for Fiji.


1.48    2012-08-03

- This release is based on version 2012e of the Olson database. This release
  includes contemporary changes for Fakaofo.


1.47    2012-07-19

- This release is based on version 2012d of the Olson database. This release
  includes contemporary changes for Morocco.


1.46    2012-04-02

- This release is based on version 2012c of the Olson database. This release
  includes contemporary changes for Morocco, Palestine, Syria, and Haiti.


1.45    2012-03-03

- Remove the dependency on DateTime and DateTime::Duration which was
  accidentally added in 1.43. Reported by Slaven Rezic. RT #75508.


1.44    2012-03-02

- This release is based on version 2012b of the Olson database. This release
  includes contemporary changes for Cuba.


1.43    2012-03-01

- This release is based on version 2012a of the Olson database. This release
  includes contemporary changes for Armenia, Chile, the Falkland Islands, and
  Tokelau.


1.42    2011-11-07

- This release is based on version 2011n of the Olson database. This release
  includes contemporary changes for Fiji, Moldova (reversing the 2011m
  changes), and Cuba. The Moldova change removes the Europe/Tiraspol zone
  added in the previous release.


1.41    2011-10-24

- This release is based on version 2011m of the Olson database. This release
  includes contemporary changes for Brazil, Moldova, and Ukraine.


1.40    2011-10-10

- This release is based on version 2011l of the Olson database. This release
  includes contemporary changes for Palestine, Fiji, Russia, Belarus, Ukraine,
  and several other post-Soviet states.


1.39    2011-09-26
