@@ -4,6 +4,16 @@
   arrayref containing an arrayref (rather than _just_ an arrayref). Reported
   by Ed Shrock. RT #76791.
 
+- The DateTime::TimeZone->names_in_category claimed that it returned names
+  based on the population of the zone. I don't think this was ever true, but
+  this data is definitely not part of the current Olson database. Reported by
+  Ed Shrock. RT #76792.
+
+  However, the DateTime::TimeZone->names_in_country method does preserve the
+  order specified in the Olson database, which is sort of based on population
+  and geography. This method is probably the best choice for presenting a list
+  of names to end user.
+
 
 1.49    2012-09-13
 
